# memcached-rust

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: http.rs  kv.rs  lib.rs
server/src/tcp/: parser.rs  server.rs
src/: http.rs  kv.rs  main.rs
src/tcp/: mod.rs  parser.rs  server.rs
