[package]
name = "memcached"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
axum = "0.5.5"
futures = "0.3.21"
nom = "7.1.1"
pretty_assertions = "1.2.1"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"
